--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="details-box details-box--show details-box__1">
                 <div class="row">
                     <!-- #col -->
-                    <div class="col-md-6">
+                    <div class="col-md-6 mb-3">
                         <div class="details-box__item rounded shadow-sm bg-white" data-sound-name="dog">
                             <div class="details-box__img-box">
                                 <img class="details-box__img w-100 h-100 obj-cover" src="https://cdn.pixabay.com/photo/2016/02/19/15/46/labrador-retriever-1210559__480.jpg" alt="Dog">
